--- a/Source/Android/app/src/main/res/values/arrays.xml
+++ b/Source/Android/app/src/main/res/values/arrays.xml
@@ -12,6 +12,20 @@
         <item>5</item>
     </integer-array>
 
+    <!-- Video backend selection -->
+    <string-array name="videoBackendEntries" translatable="false">
+        <item>OpenGL</item>
+        <item>Vulkan</item>
+        <item>Software</item>
+        <item>Null</item>
+    </string-array>
+    <integer-array name="videoBackendValues" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </integer-array>
+
     <!-- Wiimote extensions -->
     <string-array name="wiimoteExtEntries" translatable="false">
         <item>"None"</item>
